SUBDIRS = .

EXTRA_DIST = \
  core.h \
  ecrs_core.h \
  fs.h \
  gettext.h \
  platform.h \
  plibc.h \
  winproc.h 

gnunetincludedir = $(includedir)/GNUnet

gnunetinclude_HEADERS = \
  gnunet_blockstore.h \
  gnunet_bootstrap_service.h \
  gnunet_core.h \
  gnunet_datastore_service.h \
  gnunet_dht.h \
  gnunet_dht_datastore_memory.h \
  gnunet_dht_lib.h \
  gnunet_dht_service.h \
  gnunet_ecrs_lib.h \
  gnunet_fragmentation_service.h \
  gnunet_fs_lib.h \
  gnunet_fsui_lib.h \
  gnunet_gap_service.h \
  gnunet_getoption_lib.h \
  gnunet_identity_service.h \
  gnunet_pingpong_service.h \
  gnunet_protocols.h \
  gnunet_rpc_service.h \
  gnunet_session_service.h \
  gnunet_sqstore_service.h \
  gnunet_stats_lib.h \
  gnunet_stats_service.h \
  gnunet_topology_service.h \
  gnunet_traffic_lib.h \
  gnunet_traffic_service.h \
  gnunet_transport.h \
  gnunet_transport_service.h \
  gnunet_util.h 
