SUBDIRS = .

EXTRA_DIST = \
  core.h \
  dht.h \
  ecrs_core.h \
  fs.h \
  gettext.h \
  platform.h \
  plibc.h \
  winproc.h 

gnunetincludedir = $(includedir)/GNUnet

gnunetinclude_HEADERS = \
  gnunet_bootstrap_service.h \
  gnunet_chat_lib.h \
  gnunet_collection_lib.h \
  gnunet_core.h \
  gnunet_datastore_service.h \
  gnunet_dht_lib.h \
  gnunet_dht_service.h \
  gnunet_directories.h \
  gnunet_dstore_service.h \
  gnunet_ecrs_lib.h \
  gnunet_fragmentation_service.h \
  gnunet_fs_lib.h \
  gnunet_fsui_lib.h \
  gnunet_getoption_lib.h \
  gnunet_identity_lib.h \
  gnunet_identity_service.h \
  gnunet_kvstore_service.h \
  gnunet_namespace_lib.h \
  gnunet_pingpong_service.h \
  gnunet_protocols.h \
  gnunet_remote_lib.h \
  gnunet_rpc_lib.h \
  gnunet_rpc_service.h \
  gnunet_session_service.h \
  gnunet_setup_lib.h \
  gnunet_sqstore_service.h \
  gnunet_state_service.h \
  gnunet_stats_lib.h \
  gnunet_stats_service.h \
  gnunet_testing_lib.h \
  gnunet_topology_service.h \
  gnunet_tracekit_lib.h \
  gnunet_traffic_lib.h \
  gnunet_traffic_service.h \
  gnunet_transport.h \
  gnunet_transport_service.h \
  gnunet_upnp_service.h \
  gnunet_uritrack_lib.h \
  gnunet_util.h \
  gnunet_util_boot.h \
  gnunet_util_common.h \
  gnunet_util_config.h \
  gnunet_util_containers.h \
  gnunet_util_core.h \
  gnunet_util_cron.h \
  gnunet_util_crypto.h \
  gnunet_util_disk.h \
  gnunet_util_error.h \
  gnunet_util_error_loggers.h \
  gnunet_util_getopt.h \
  gnunet_util_network.h \
  gnunet_util_network_client.h \
  gnunet_util_os.h \
  gnunet_util_string.h \
  gnunet_util_threads.h 
